# Cmake_Product_Line

./: .gitignore  README.md  XXProductLine.pro
SharedAssets/: SharedAssets.pro  sharedassets.h
UniqueAsset1/: UniqueAsset1.pro  uniqueasset1.cpp  uniqueasset1.h
UniqueAsset2/: UniqueAsset2.pro  uniqueasset2.cpp  uniqueasset2.h
UniqueAsset3/: uniqueasset3.cpp  uniqueasset3.h
UniqueAsset4/: UniqueAsset4.pro  uniqueasset4.cpp  uniqueasset4.h
XXProductLineApplication/: ProductBuilder.pri  ProductConfig.pri  XXProductLineApplication.pro  mainwindow.cpp  mainwindow.h
XXProductLineApplication/ProductBuilder/: Product1Builder.cpp  Product1Builder.h  Product5Builder.cpp
XXProductLineApplication/ProductLineAPI/: ProductLineAPI.pri  productlineapi.cpp  productlineapi.h  websocketsapi.cpp
XXProductLineTests/: main.cpp
XXProductLineTests/UniqueAsset1/: tst_uniqueasset1.cpp
XXProductLineTests/UniqueAsset3/: tst_uniqueasset3.h
XXProductLineTests/UniqueAsset4/: tst_uniqueasset4.h
cmake/: CMakeLists.txt
cmake/SharedAssets/: CMakeLists.txt  sharedassets.cpp
cmake/UniqueAsset1/: CMakeLists.txt  uniqueasset1.h
cmake/UniqueAsset2/: CMakeLists.txt  uniqueasset2.cpp
cmake/UniqueAsset3/: CMakeLists.txt  uniqueasset3.cpp
cmake/UniqueAsset4/: CMakeLists.txt  uniqueasset4.h
cmake/XXProductLineApplication/: CMakeLists.txt  ProductBuilder.cmake  ProductConfig.cmake  mainwindow.h
cmake/XXProductLineApplication/ProductBuilder/: IProductBuilder.h  Product1Builder.cpp  Product3Builder.cpp
cmake/XXProductLineApplication/ProductLineAPI/: ProductLineAPI.cmake  productlineapi.cpp
cmake/XXProductLineTests/: CMakeLists.txt
cmake/XXProductLineTests/SharedAssets/: SharedAssetsTest.cmake  SharedAssetsTest.pri  tst_sharedassets.cpp  tst_sharedassets.h
cmake/XXProductLineTests/UniqueAsset1/: UniqueAsset1Test.cmake  tst_uniqueasset1.cpp
cmake/XXProductLineTests/UniqueAsset2/: UniqueAsset2Test.cmake
cmake/XXProductLineTests/UniqueAsset3/: UniqueAsset3Test.cmake  UniqueAsset3Test.pri  tst_uniqueasset3.cpp
cmake/XXProductLineTests/UniqueAsset4/: UniqueAsset4Test.cmake  UniqueAsset4Test.pri  tst_uniqueasset4.cpp
qmake/: XXProductLine.pro
qmake/UniqueAsset2/: uniqueasset2.h
qmake/UniqueAsset3/: UniqueAsset3.pro  uniqueasset3.h
qmake/XXProductLineApplication/: ProductConfig.pri
qmake/XXProductLineApplication/ProductBuilder/: IProductBuilder.h  Product2Builder.cpp  Product4Builder.cpp
qmake/XXProductLineApplication/ProductLineAPI/: ProductLineAPI.pri  websocketsapi.cpp
qmake/XXProductLineTests/: XXProductLineTests.pro
qmake/XXProductLineTests/UniqueAsset1/: UniqueAsset1Test.pri  tst_uniqueasset1.h
qmake/XXProductLineTests/UniqueAsset2/: UniqueAsset2Test.pri  tst_uniqueasset2.cpp  tst_uniqueasset2.h
